--- a/style.css
+++ b/style.css
@@ -6,10 +6,10 @@ body {
 }
 
 header {
-    border-bottom: solid 2px lime;
+    border-bottom: solid 2px rgb(255, 0, 174);
     padding: 20px;
     font-size: 32px;
-    color: lime;
+    color: rgb(255, 0, 208);
 }
 
 .background {
