--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ header {
     padding-top: 80px;
     display: flex;
     justify-content: center;
-    border-bottom: solid 2px lime;
+    border-bottom: solid 2px rgb(255, 0, 221);
 }
 
 .video {
