--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    color: lime;
+    color: rgb(234, 0, 255);
     background: black;
     margin: 0px;
     font-family: "Rubik Wet Paint", system-ui;
@@ -26,7 +26,7 @@ header {
 }
 
 .video {
-    border: solid 2px lime;
+    border: solid 2px rgb(217, 0, 255);
 }
 
 .chamada-texto {
@@ -86,7 +86,7 @@ p {
 .categoria-videos {
     display: flex;
     overflow-x: auto;
-    scrollbar-color: lime black;
+    scrollbar-color: rgb(255, 0, 170) black;
     scrollbar-width: thin;
     gap: 10px;
 }
@@ -104,11 +104,11 @@ p {
 
 .categoria-videos img:hover {
     opacity: 1.0;
-    border: 3px solid lime;
+    border: 3px solid rgb(255, 0, 179);
 }
 
 .categoria h2 {
-    color: lime;
+    color: rgb(255, 0, 230);
 }
 
 .copyright {
