--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     color: rgb(234, 0, 255);
-    background: black;
+    background: rgb(243, 206, 206);
     margin: 0px;
     font-family: "Rubik Wet Paint", system-ui;
 }
